Fix meta data, tweak icons, tweak design.

--- a/about.html
+++ b/about.html
@@ -2,15 +2,17 @@
 title: About
 permalink: /about/
 navActive: about
+excerpt: "Details about my services, prices and, me."
 ---
 <div class="u-sPV1 u-sPHH u-lRestrictRead">
 
-  <div class="u-sMB1 Prose">
-    <h2>Services</h2>
+  <div class="Prose">
+    <h1 class="u-sMB1">About</h1>
+    <h2 class="u-sMB1">Services/Prices</h2>
   </div>
 
   <div class="u-sMB1">
-    <h3>Wedding Hair</h3>
+    <h3>Wedding/Bridal Hair</h3>
     <ul class="u-sMTH">
       <li class="Pricing">
         <span class="Pricing-title">Trial</span>
@@ -23,6 +25,14 @@ navActive: about
       <li class="Pricing">
         <span class="Pricing-title">Bridesmaids</span>
         <span class="Pricing-price">$90</span>
+      </li>
+      <li class="Pricing">
+        <span class="Pricing-title">Mother of the Bride/Groom</span>
+        <span class="Pricing-price">$80</span>
+      </li>
+      <li class="Pricing">
+        <span class="Pricing-title">Flower Girls</span>
+        <span class="Pricing-price">$25</span>
       </li>
     </ul>
   </div>
