--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 title: Contact
 permalink: /contact/
 navActive: contact
+excerpt: "If you could let me know a little about yourself and what you are looking for, I'd love to help achieve the hair of your dreams."
 ---
 
 <div id="contact" class="u-lRestrictRead u-sPV1 u-sPHH">
