--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,7 @@
 title: Gallery
 permalink: /gallery/
 navActive: gallery
+excerpt: "Photos of my previous work."
 classes:
   - Gallery-modalContainer
   - js-Gallery-modalContainer
@@ -28,6 +29,8 @@ gallery:
   - 19
   - 20
 ---
+
+<h1 class="u-hiddenVisually">Gallery</h1>
 
 <div class="Gallery js-Gallery">
 
@@ -59,4 +62,9 @@ gallery:
     </ul>
   </div> -->
 
+</div>
+
+<div class="Prose u-sPV1 u-sPHH u-textCenter">
+  <h3 class="u-sMBH">Like what you see here?</h3>
+  <p>Feel free to <a href="/contact">contact me</a> or <a href="/about">find out more</a> about my services, prices, and me.</p>
 </div>
