--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ navActive: home
 ---
 
 <h1 class="Home-title">
+  <span class="u-hiddenVisually">Bekki Brooker - Hair Stylist</span>
   <img class="Home-logo" width="300" src="{{ site.baseurl }}/assets/images/logo.svg" alt="Bekki Brooker, Hair Stylist">
 </h1>
 
