--- a/gallery.html
+++ b/gallery.html
@@ -64,7 +64,7 @@ gallery:
 
 </div>
 
-<div class="Prose u-sPV1 u-sPHH u-textCenter">
+<div class="Prose u-sPV1 u-sMV1 u-sPHH u-textCenter">
   <h3 class="u-sMBH">Like what you see here?</h3>
   <p>Feel free to <a href="/contact">contact me</a> or <a href="/about">find out more</a> about my services, prices, and me.</p>
 </div>
