--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@ excerpt: "Details about my services, prices and, me."
   </div>
   <hr>
   <section class="Prose">
-    <div class="Grid Grid--withGutter Grid--alignRight">
+    <div class="Grid Grid--alignRight">
       <div class="Grid-cell u-sm-sizeFull u-size5of8 u-sMB1">
         <div class="u-sMB1">
           <h2>About Me</h2>
