Update facebook page link

--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@ excerpt: "Details about my services, prices and, me."
               </a>
             </li>
             <li>
-              <a class="Social-link Social-link--facebook" title="Facebook" href="http://facebook.com/bekkibrooker">
+              <a class="Social-link Social-link--facebook" title="Facebook" href="http://facebook.com/bekkibrookerhair">
                 <svg class="Icon Social-icon">
                   <title>Facebook</title>
                   <use xlink:href="#Icon-facebook"></use>
