Cuts and colours link. Update to link underlines.

--- a/about.html
+++ b/about.html
@@ -60,14 +60,15 @@ excerpt: "Details about my services, prices and, me."
   </div>
 
   <div class="u-textCenter u-sMV1 Prose">
-    <p class="u-textSmall">
+    <p>
       All prices are for my home studio. <strong>I will travel</strong>
       for any appointment with the addition of a mileage based travel fee.
     </p>
+    <p>
+      In the rare case I am available, here are my <a href="/about/cuts-colours">prices for cuts &amp; colours</a>.
+    </p>
     <p class="u-textLead">
-      To make a booking, please fill out my
-      <a href="/contact">contact form</a>
-      .
+      To make a booking, please fill out my <a href="/contact">contact form</a>.
     </p>
   </div>
   <hr>
