--- a/cuts-colours.html
+++ b/cuts-colours.html
@@ -147,5 +147,10 @@ excerpt: "The cuts and colours I offer and their prices"
       </li>
     </ul>
   </div>
+  <div class="u-textCenter u-sMV1 Prose">
+    <p class="u-textLead">
+      To make a booking, please fill out my <a href="/contact">contact form</a>.
+    </p>
+  </div>
 
 </div>
