Tweaked layout. Added contact details.

--- a/cuts-colours.html
+++ b/cuts-colours.html
@@ -4,7 +4,7 @@ permalink: /about/cuts-colours/
 navActive: about
 excerpt: "The cuts and colours I offer and their prices"
 ---
-<div class="u-sPV1 u-sPHH u-lRestrictRead">
+<div class="u-sPV1 u-lRestrictRead">
 
   <div class="Prose">
     <h1 class="u-sMB1">Cuts &amp; Colours</h1>
