--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ permalink: /about/
 navActive: about
 excerpt: "Details about my services, prices and, me."
 ---
-<div class="u-sPV1 u-sPHH u-lRestrictRead">
+<div class="u-sPV1 u-lRestrictRead">
 
   <div class="Prose">
     <h1 class="u-sMB1">About</h1>
@@ -28,7 +28,7 @@ excerpt: "Details about my services, prices and, me."
       </li>
       <li class="Pricing">
         <span class="Pricing-title">Mother of the Bride/Groom</span>
-        <span class="Pricing-price">$80</span>
+        <span class="Pricing-price">$60</span>
       </li>
       <li class="Pricing">
         <span class="Pricing-title">Flower Girls</span>
@@ -59,17 +59,69 @@ excerpt: "Details about my services, prices and, me."
     </ul>
   </div>
 
-  <div class="u-textCenter u-sMV1 Prose">
+  <div class="u-sMV1 Prose">
     <p>
       All prices are for my home studio. <strong>I will travel</strong>
-      for any appointment with the addition of a mileage based travel fee.
+      for any appointment with the addition of a travel fee.
     </p>
-    <p>
-      In the rare case I am available, here are my <a href="/about/cuts-colours">prices for cuts &amp; colours</a>.
-    </p>
-    <p class="u-textLead">
-      To make a booking, please fill out my <a href="/contact">contact form</a>.
-    </p>
+  </div>
+
+  <div class="u-sMBH">
+    <h3 class="u-sMBH">Travel Fees</h3>
+    <h4>Brisbane</h4>
+    <ul class="u-sMTH">
+      <li class="Pricing">
+        <span class="Pricing-title">South</span>
+        <span class="Pricing-price">$20</span>
+      </li>
+      <li class="Pricing">
+        <span class="Pricing-title">Central</span>
+        <span class="Pricing-price">$40</span>
+      </li>
+      <li class="Pricing">
+        <span class="Pricing-title">North</span>
+        <span class="Pricing-price">$60</span>
+      </li>
+    </ul>
+  </div>
+  <div class="u-sMBH">
+    <h4>Gold Coast</h4>
+    <ul class="u-sMTH">
+      <li class="Pricing">
+        <span class="Pricing-title">North</span>
+        <span class="Pricing-price">$20</span>
+      </li>
+      <li class="Pricing">
+        <span class="Pricing-title">Central</span>
+        <span class="Pricing-price">$40</span>
+      </li>
+      <li class="Pricing">
+        <span class="Pricing-title">South</span>
+        <span class="Pricing-price">$60</span>
+      </li>
+    </ul>
+  </div>
+  <div class="u-sMB1">
+    <h4>Sunshine Coast</h4>
+    <ul class="u-sMTH">
+      <li class="Pricing">
+        <span class="Pricing-title">South</span>
+        <span class="Pricing-price">$80</span>
+      </li>
+      <li class="Pricing">
+        <span class="Pricing-title">Central</span>
+        <span class="Pricing-price">$100</span>
+      </li>
+      <li class="Pricing">
+        <span class="Pricing-title">North</span>
+        <span class="Pricing-price">$120</span>
+      </li>
+    </ul>
+  </div>
+
+  <div class="u-textCenter u-sMV1 Prose">
+    <p>Other locations quoted on request. In the rare case I am available, here are my <a href="/about/cuts-colours">prices for cuts &amp; colours</a>.</p>
+    <p class="u-textLead">To make a booking, please fill out my <a href="/contact">contact form</a>.</p>
   </div>
   <hr>
   <section class="Prose">
@@ -125,18 +177,18 @@ excerpt: "Details about my services, prices and, me."
               </a>
             </li>
             <li>
-              <a class="Social-link Social-link--twitter" title="Twitter" href="http://twitter.com/bekkibrooker">
-                <svg class="Icon Social-icon">
-                  <title>Twitter</title>
-                  <use xlink:href="#Icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
               <a class="Social-link Social-link--facebook" title="Facebook" href="http://facebook.com/bekkibrookerhair">
                 <svg class="Icon Social-icon">
                   <title>Facebook</title>
                   <use xlink:href="#Icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="Social-link Social-link--twitter" title="Twitter" href="http://twitter.com/bekkibrooker">
+                <svg class="Icon Social-icon">
+                  <title>Twitter</title>
+                  <use xlink:href="#Icon-twitter"></use>
                 </svg>
               </a>
             </li>
