--- a/journal.html
+++ b/journal.html
@@ -4,7 +4,7 @@ permalink: /journal/
 navActive: journal
 ---
 
-<div class="u-lRestrictRead u-sPV1 u-sPHH">
+<div class="u-lRestrictRead u-sPV1">
   <div class="Prose">
     <h1 class="u-sMB1">Journal</h1>
   </div>
