--- a/about.html
+++ b/about.html
@@ -3,7 +3,9 @@ title: About
 permalink: /about/
 navActive: about
 excerpt: "Details about my services, prices and, me."
+published: true
 ---
+
 <div class="u-sPV1 u-lRestrictRead">
 
   <div class="Prose">
@@ -169,7 +171,7 @@ excerpt: "Details about my services, prices and, me."
               </a>
             </li>
             <li>
-              <a class="Social-link Social-link--instagram" title="Instagram" href="http://instagram.com/bekkibrooker">
+              <a class="Social-link Social-link--instagram" title="Instagram" href="http://instagram.com/bekkibrookerhair">
                 <svg class="Icon Social-icon">
                   <title>Instagram</title>
                   <use xlink:href="#Icon-instagram"></use>
