--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@ title: Contact
 permalink: /contact/
 navActive: contact
 excerpt: "If you could let me know a little about yourself and what you are looking for, I'd love to help achieve the hair of your dreams."
+published: true
 ---
 
 <div id="contact" class="u-sPV1 u-lRestrict">
@@ -99,7 +100,7 @@ excerpt: "If you could let me know a little about yourself and what you are look
             </a>
           </li>
           <li>
-            <a class="Social-link Social-link--instagram" title="Instagram" href="http://instagram.com/bekkibrooker">
+            <a class="Social-link Social-link--instagram" title="Instagram" href="http://instagram.com/bekkibrookerhair">
               <svg class="Icon Social-icon">
                 <title>Instagram</title>
                 <use xlink:href="#Icon-instagram"></use>
@@ -123,7 +124,7 @@ excerpt: "If you could let me know a little about yourself and what you are look
             </a>
           </li>
         </ul>
-        <p>Share a board with me on <a href="http://pinterest.com/bekkibrooker">Pinterest</a>, follow my life on <a href="http://instagram.com/bekkibrooker">Instagram</a>, like or review me on <a href="http://facebook.com/bekkibrookerhair">Facebook</a>, and get a bit of everything on <a href="http://twitter.com/bekkibrooker">Twitter</a>. Reviews coming soon to <a href="https://plus.google.com/u/3/b/106849842876064455946/106849842876064455946/about">Google+</a>.</p>
+        <p>Share a board with me on <a href="http://pinterest.com/bekkibrooker">Pinterest</a>, follow my work on <a href="http://instagram.com/bekkibrookerhair">Instagram</a>, like or review me on <a href="http://facebook.com/bekkibrookerhair">Facebook</a>, and get a bit of everything on <a href="http://twitter.com/bekkibrooker">Twitter</a>. Reviews coming soon to <a href="https://plus.google.com/u/3/b/106849842876064455946/106849842876064455946/about">Google+</a>.</p>
       </div>
     </div>
   </div>
