Updated gallery and added google links

--- a/contact.html
+++ b/contact.html
@@ -116,6 +116,14 @@ published: true
             </a>
           </li>
           <li>
+            <a class="Social-link Social-link--google" title="Google" href="https://plus.google.com/+Bekkibrookerhair">
+              <svg class="Icon Social-icon">
+                <title>Google</title>
+                <use xlink:href="#Icon-google"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
             <a class="Social-link Social-link--twitter" title="Twitter" href="http://twitter.com/bekkibrooker">
               <svg class="Icon Social-icon">
                 <title>Twitter</title>
@@ -124,7 +132,7 @@ published: true
             </a>
           </li>
         </ul>
-        <p>Share a board with me on <a href="http://pinterest.com/bekkibrooker">Pinterest</a>, follow my work on <a href="http://instagram.com/bekkibrookerhair">Instagram</a>, like or review me on <a href="http://facebook.com/bekkibrookerhair">Facebook</a>, and get a bit of everything on <a href="http://twitter.com/bekkibrooker">Twitter</a>. Reviews coming soon to <a href="https://plus.google.com/u/3/b/106849842876064455946/106849842876064455946/about">Google+</a>.</p>
+        <p>Share a board with me on <a href="http://pinterest.com/bekkibrooker">Pinterest</a>, follow my work on <a href="http://instagram.com/bekkibrookerhair">Instagram</a>, like or review me on <a href="http://facebook.com/bekkibrookerhair">Facebook</a>, leave a review on <a href="https://plus.google.com/+Bekkibrookerhair">Google</a>, and get a bit of everything on <a href="http://twitter.com/bekkibrooker">Twitter</a>.</p>
       </div>
     </div>
   </div>
