--- a/about.html
+++ b/about.html
@@ -187,6 +187,14 @@ published: true
               </a>
             </li>
             <li>
+              <a class="Social-link Social-link--google" title="Google" href="http://google.com/bekkibrooker">
+                <svg class="Icon Social-icon">
+                  <title>Google</title>
+                  <use xlink:href="#Icon-google"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
               <a class="Social-link Social-link--twitter" title="Twitter" href="http://twitter.com/bekkibrooker">
                 <svg class="Icon Social-icon">
                   <title>Twitter</title>
