Tweak about page

--- a/about.html
+++ b/about.html
@@ -121,9 +121,12 @@ published: true
     </ul>
   </div>
 
-  <div class="u-textCenter u-sMV1 Prose">
-    <p>Other locations quoted on request. In the rare case I am available, here are my <a href="/about/cuts-colours">prices for cuts &amp; colours</a>.</p>
-    <p class="u-textLead">To make a booking, please fill out my <a href="/contact">contact form</a>.</p>
+  <p class="u-SMT1">Other locations quoted <strong><a href="/contact">on request</a></strong>.</p>
+
+  <div class="u-sMB1 Prose">
+    <hr>
+    <p class="u-textCenter u-textLead">To make a booking, please fill out my <a href="/contact">contact form</a>.</p>
+    <p class="u-textCenter">In the rare case I am available, here are my <a href="/about/cuts-colours">prices for cuts &amp; colours</a>.</p>
   </div>
   <hr>
   <section class="Prose">
