Update prices and travel fee layout

--- a/about.html
+++ b/about.html
@@ -22,11 +22,11 @@ published: true
       </li>
       <li class="Pricing">
         <span class="Pricing-title">Bride</span>
-        <span class="Pricing-price">$100</span>
+        <span class="Pricing-price">$90</span>
       </li>
       <li class="Pricing">
         <span class="Pricing-title">Bridesmaids</span>
-        <span class="Pricing-price">$90</span>
+        <span class="Pricing-price">$80</span>
       </li>
       <li class="Pricing">
         <span class="Pricing-title">Mother of the Bride/Groom</span>
@@ -69,56 +69,60 @@ published: true
   </div>
 
   <div class="u-sMBH">
-    <h3 class="u-sMBH">Travel Fees</h3>
-    <h4>Brisbane</h4>
-    <ul class="u-sMTH">
-      <li class="Pricing">
-        <span class="Pricing-title">South</span>
-        <span class="Pricing-price">$20</span>
-      </li>
-      <li class="Pricing">
-        <span class="Pricing-title">Central</span>
-        <span class="Pricing-price">$40</span>
-      </li>
-      <li class="Pricing">
-        <span class="Pricing-title">North</span>
-        <span class="Pricing-price">$60</span>
-      </li>
-    </ul>
-  </div>
-  <div class="u-sMBH">
-    <h4>Gold Coast</h4>
-    <ul class="u-sMTH">
-      <li class="Pricing">
-        <span class="Pricing-title">North</span>
-        <span class="Pricing-price">$20</span>
-      </li>
-      <li class="Pricing">
-        <span class="Pricing-title">Central</span>
-        <span class="Pricing-price">$40</span>
-      </li>
-      <li class="Pricing">
-        <span class="Pricing-title">South</span>
-        <span class="Pricing-price">$60</span>
-      </li>
-    </ul>
-  </div>
-  <div class="u-sMB1">
-    <h4>Sunshine Coast</h4>
-    <ul class="u-sMTH">
-      <li class="Pricing">
-        <span class="Pricing-title">South</span>
-        <span class="Pricing-price">$80</span>
-      </li>
-      <li class="Pricing">
-        <span class="Pricing-title">Central</span>
-        <span class="Pricing-price">$100</span>
-      </li>
-      <li class="Pricing">
-        <span class="Pricing-title">North</span>
-        <span class="Pricing-price">$120</span>
-      </li>
-    </ul>
+    <h3 class="u-sMBQ">Travel Fees</h3>
+    <div class="Grid Grid--withGutter">
+      <div class="Grid-cell u-lg-size1of3 u-sMTH">
+        <h4>Brisbane</h4>
+        <ul class="u-sMTQ">
+          <li class="Pricing">
+            <span class="Pricing-title">South</span>
+            <span class="Pricing-price">$20</span>
+          </li>
+          <li class="Pricing">
+            <span class="Pricing-title">Central</span>
+            <span class="Pricing-price">$40</span>
+          </li>
+          <li class="Pricing">
+            <span class="Pricing-title">North</span>
+            <span class="Pricing-price">$60</span>
+          </li>
+        </ul>
+      </div>
+      <div class="Grid-cell u-lg-size1of3 u-sMTH">
+        <h4>Gold Coast</h4>
+        <ul class="u-sMTQ">
+          <li class="Pricing">
+            <span class="Pricing-title">North</span>
+            <span class="Pricing-price">$20</span>
+          </li>
+          <li class="Pricing">
+            <span class="Pricing-title">Central</span>
+            <span class="Pricing-price">$40</span>
+          </li>
+          <li class="Pricing">
+            <span class="Pricing-title">South</span>
+            <span class="Pricing-price">$60</span>
+          </li>
+        </ul>
+      </div>
+      <div class="Grid-cell u-lg-size1of3 u-sMTH">
+        <h4>Sunshine Coast</h4>
+        <ul class="u-sMTQ">
+          <li class="Pricing">
+            <span class="Pricing-title">South</span>
+            <span class="Pricing-price">$80</span>
+          </li>
+          <li class="Pricing">
+            <span class="Pricing-title">Central</span>
+            <span class="Pricing-price">$100</span>
+          </li>
+          <li class="Pricing">
+            <span class="Pricing-title">North</span>
+            <span class="Pricing-price">$120</span>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 
   <p class="u-SMT1">Other locations quoted <strong><a href="/contact">on request</a></strong>.</p>
