Add page breaks to stop sections splitting on print

--- a/runsheet.html
+++ b/runsheet.html
@@ -111,6 +111,10 @@ layout: branded
     [contenteditable]:empty {
       display: none;
     }
+    .runsheet__item,
+    .runsheet__items {
+      page-break-inside: avoid;
+    }
   }
 </style>
 <div class="runsheet">
