--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,9 @@ published: true
         <p class="u-textLead u-sMT1">
           If you could let me know a little about yourself and what you are looking for, I'd love to help achieve the hair of your dreams.
         </p>
+        <p class="u-textLead u-sMT1 u-sPA1" style="background-color: #292f33; color: #fff;">
+          <strong>PLEASE NOTE:</strong> Unfortunately, I am not available for any further bookings in 2017 and will not be taking bookings again until January 2018.
+        </p>
       </div>
       <form id="contact-form" class="u-sMV1">
         <fieldset id="contact-form-fields" class="Form-fields">
@@ -62,7 +65,12 @@ published: true
                 <img class="u-lRound" src="/assets/images/bekki-brooker-sm.jpg" alt="Bekki Brooker">
               </div>
               <div class="u-tableCell u-size2of3 u-sPLH u-alignMiddle">
-                <p><strong>Thanks for contacting me.</strong><br>I will get back to you as soon as I can.</p>
+                <p>
+                  <strong>Thanks for contacting me.</strong><br>I will get back to you as soon as I can.
+                </p>
+                <p class="u-sMTH">
+                  <strong>PLEASE NOTE:</strong> Unfortunately, I am not available for any further bookings in 2017 and will not be taking bookings again until January 2018.
+                </p>
               </div>
             </div>
           </div>
