Closing down site

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@ navActive: home
 </h1>
 
 <div class="Home-cta">
-  <a href="{{ site.baseurl }}/gallery" class="Home-ctaButton">View the gallery</a>
+  <div class="Home-ctaButton">Permanently closed</div>
 </div>
